<resources>
    <string name="app_name">Esh7enly user</string>
    <string name="default_name">Esh7enly</string>
    <string-array name="data">
        <item>العربية</item>
        <item>English</item>
    </string-array>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="abr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="july">JULY</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="balance_added">The balance has been added to your account</string>
    <string name="visa">Paid by visa</string>
    <string name="cash">Paid by vodafone cash</string>
    <string name="wallet">Paid by wallet</string>
    <string name="chooseLanguage">Choose app language</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="no_internet_error">No internet connection.</string>
    <string name="trans_id_title">"Transaction ID : "</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="esh7enly_solgan">Pay and recharge easily and fast</string>
    <string name="fastest">Fastest..Easiest..</string>
    <string name="welcome">Welcome</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="skip_to_login">تخطى لتسجيل الدخول</string>
    <string name="register_charge">مع إشحنلى \n سجـل واشحـن \n فى ثـانية</string>
    <string name="search">Search....</string>
    <string name="cards">\" Cards\"</string>
    <string name="print_succes">Successful</string>
    <string name="print_failed">Failed</string>
    <string name="print_cancelled">Cancelled</string>
    <string name="print_pending">Pending</string>
    <string name="of">\" Of \"</string>
    <string name="params_amount">Amount</string>
    <string name="required">Required</string>
    <string name="add_to_reminder">Are you want add this service to reminder?</string>
    <string name="alert">Alert؟</string>
    <string name="add">Add Service </string>
    <string name="no_add">Cancel</string>
    <string name="required_value_range">Value Must be between</string>
    <string name="required_value_number">Value Must be</string>
    <string name="and">and</string>
    <string name="number">Number</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="inquiry_fees">Fees</string>
    <string name="inquiry_params">Params</string>
    <string name="inquiry_information">Information</string>
    <string name="inquiry_amount">Amount</string>
    <string name="inquiry_click_to_edit_amount">Click to edit amount</string>
    <string name="inquiry_paid_amount">Paid Amount</string>
    <string name="inquiry_total_amount">Total Amount</string>
    <string name="login_btn">Login</string>
    <string name="profile_mobile">Mobile</string>
    <string name="msg_confirm_pay">\" Are you sure to pay \"</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="bank_card">Bank card</string>
    <string name="digital_wallet">Electronic wallets</string>
    <string name="support">Support</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_mobile">Enter new mobile</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="type_old_password">Please type old password</string>
    <string name="type_new_password">Please type new password</string>
    <string name="type_confirm_new_password">Please confirm new password</string>
    <string name="enter_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="no_account">Don`t have an account? signup</string>
    <string name="register">Register</string>
    <string name="slogan">Easiest and Fastest</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="password_instructions">!password must contain letters and numbers and be 8-16 characters</string>
    <string name="deposit_id">Deposit id: </string>
    <string name="paytabs_title">Pay now with esh7enly</string>
    <string name="email">Email</string>
    <string name="your_password">Your password</string>
    <string name="your_name">Write first and last name</string>
    <string name="first_name">Write first name</string>
    <string name="last_name">Write last name</string>
    <string name="signUp">Sign up</string>
    <string name="have_account">Have an account, Sign in</string>
    <string name="error_message__blank_phone">Please input Phone number.</string>
    <string name="error_message__blank_full_name">Please input Full Name.</string>
    <string name="error_message__blank_first_name">Please input First Name.</string>
    <string name="error_message__blank_last_name">Please input Last Name.</string>
    <string name="error_message__blank_password">Please enter the password.</string>
    <string name="error_message__blank_phone_number">Please enter valid phone number.</string>
    <string name="error_message__blank_otp">Please enter valid OTP.</string>
    <string name="password_not_match_confirm_password">Password in not match with confirmation password</string>
    <string name="accept_privacy">Accept terms and privacy policy</string>
    <string name="phone_number_msg">We will send OTP Code to the phone number for verification</string>
    <string name="send_otp">Send OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_ed">*</string>
    <string name="otp_msg">Please enter the 6 digit OTP sent to entered mobile number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="home">Home</string>
    <string name="balance">Balance</string>
    <string name="profile">Profile</string>
    <string name="balance_value">0.00 EGP</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="update_data">Update Data</string>
    <string name="call_us">Call Us</string>
    <string name="chatting">Chatting on whatsapp</string>
    <string name="send_email">Send email</string>
    <string name="change_user_data">Change User Data</string>
    <string name="change_language">Change language</string>
    <string name="account_setting">Account setting</string>
    <string name="results">Results</string>
    <string name="add_balance">Add Balance</string>
    <string name="transactions">Transactions</string>
    <string name="share">Share and earn money</string>
    <string name="confirm">CONFIRM</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="success">SUCCESS</string>
    <string name="info"> INFO </string>
    <string name="quantity">Quantity</string>
    <string name="drawer_recharge">Recharge</string>
    <string name="filter_amount">Amount</string>
    <string name="ADD">add</string>
    <string name="CANCEL">CANCEL</string>
    <string name="qr_code">Qr-Code</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="confirmation_title">CONFIRMATION !</string>
    <string name="dialog_amount">Amount : </string>
    <string name="egp">" EGP"</string>
    <string name="dialog_total_amount">Total Amount : </string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="insert_card_please">Please click Inquire then put the cart</string>
    <string name="inquiry">Inquiry</string>
    <string name="payment_details">Payment Details</string>
    <string name="balance_available"> EGP Available</string>
    <string name="pay">Pay</string>
    <string name="dialog_editable_amount_msg">You Can Edit Amount With in</string>
    <string name="trans_details_transaction_number_title">Transaction Number</string>
    <string name="trans_details_balance_before_titlea">Balance Before</string>
    <string name="trans_details_balance_after_titlea">Balance After</string>
    <string name="current_card">Current Card</string>
    <string name="bulk_card">Bulk card</string>
    <string name="trans_details_service_title">SERVICE</string>
    <string name="trans_details_provider_title">Provider</string>
    <string name="trans_details_created_at_title">Created at</string>
    <string name="trans_details_message_error_title">Message Error</string>
    <string name="trans_details_pin_title">Pin</string>
    <string name="trans_details_serial_title">Serial</string>
    <string name="trans_details_client_number_title">Client Number</string>
    <string name="trans_details_amount_title_new">Amount</string>
    <string name="trans_details_total_amount_title_new">Total Amount</string>
    <string name="trans_deails_print_button">Print</string>
    <string name="trans_details_commission_title">Commission</string>
    <string name="need_permission">Need permission to save file</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="refund">Return and Refund Policy</string>
    <string name="presents">Gift</string>
</resources>