<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TBHeading"
                android:gravity="center"
                android:text="@string/drawer_recharge"
               />

            <View
                android:id="@+id/view19"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/view__primary_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogMessageTextView" />

            <TextView
                android:id="@+id/tv_title_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/filter_amount"
                android:textAlignment="center"
                android:textColor="@color/grey_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view19" />

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_bg_stroke"
                android:inputType="number"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text__primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_qty" />

            <TextView
                android:id="@+id/tvCreditCards"
                style="@style/TBDrawerTextStyle"
                android:clickable="true"
                android:drawableTint="@color/grey_900"
                android:focusable="true"
                android:text="@string/credit_cards"
                android:textColor="@color/md_black_1000" />

            <TextView
                android:id="@+id/tvQr"
                style="@style/TBDrawerTextStyle"
                android:clickable="true"
                android:drawableTint="@color/grey_900"
                android:focusable="true"
                android:text="@string/qr_code"
                android:textColor="@color/md_black_1000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/TBMaterialButtonStyle.Stroked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/CANCEL" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/TBMaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/ADD"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>