<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/material_card_layout"
                android:id="@+id/includedLayout"
                />

            <TextView
                app:fontFamily="@font/readexrromedium"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/includedLayout"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/register"
                />

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/txt_register"
                style="@style/NewEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/fill_first_name"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/colorPrimary"
                tools:hint="@string/first_name">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_first_name"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_register"
                android:id="@+id/fill_last_name"
                style="@style/NewEditText"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                tools:hint="@string/last_name"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/fill_first_name"
                >

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/NewEditText"
                app:layout_constraintTop_toBottomOf="@id/fill_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fill_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/colorPrimary"
                tools:hint="@string/your_password">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/fill_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:id="@+id/password_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/colorPrimary">

                <!--this is the actual edit text which takes the input-->
                <TextView
                    android:text="@string/password_instructions"
                    android:id="@+id/user_password_instructions"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/NewEditText"
                app:layout_constraintTop_toBottomOf="@id/password_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fill_confirm_password"
                app:passwordToggleEnabled="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/colorPrimary"
                tools:hint="@string/confirm_password">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/NewEditText"
                app:layout_constraintTop_toBottomOf="@id/fill_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fillEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/colorPrimary"
                tools:hint="@string/email">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                app:layout_constraintStart_toStartOf="@id/fill_confirm_password"
                android:buttonTint="@color/colorPrimary"
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                tools:text="@string/accept_privacy"
                app:layout_constraintTop_toBottomOf="@+id/fillEmail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/_10sdp"
                tools:text="@string/signUp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                tools:text="@string/have_account"
                app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>